--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,7 @@
 	border-style: solid;
 	border-color: #999999;
   border-top-color:#CCC;
-  height: 560px;
-  
+  height: 580px;  
   background-color: rgb(255, 255, 255);  
 }
 
@@ -122,7 +121,7 @@
 }
 
 .tab-content-app {
-  height: 450px;
+  height: 480px;
   border-bottom: 1px solid rgb(240, 240, 240);
   margin-bottom: 10px;
 }
@@ -180,4 +179,20 @@ h4 {
 
 .smallText {
 	font-size: 10px;
+}
+
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .nav-link.active:hover {
+  color: #4e3500;
+  font-weight: bold;
+}
+
+.navbar-light .navbar-brand {  
+  color: #c75629;
+  font-weight: bold;
+}
+
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-brand:hover {  
+  color: #ffa600;
 }
